--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
@@ -13,3 +14,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+server:
+  port: 8081
+  servlet:
+    context-path: /books
+  address: 0.0.0.0
+
